--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView5"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background"
+        android:background="@drawable/background2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:fontFamily="@font/robotolight"
+            android:fontFamily="@font/meticula"
             android:gravity="center"
             android:text="0%"
             android:textColor="@color/white"
@@ -156,7 +156,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/robotolight"
+            android:fontFamily="@font/meticula"
             android:gravity="center"
             android:lineSpacingExtra="10dp"
             android:text="Connection lost\nClick reconnect button to connect device"
@@ -172,7 +172,7 @@
             android:layout_width="150dp"
             android:layout_height="40dp"
             android:background="@drawable/shape_btn"
-            android:fontFamily="@font/robotolight"
+            android:fontFamily="@font/meticula"
             android:gravity="center"
             android:text="Reconnect"
             android:textColor="@color/white"
