--- a/app/src/main/res/drawable/shape_color_roundsquare4.xml
+++ b/app/src/main/res/drawable/shape_color_roundsquare4.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:topLeftRadius="30dp"
-        android:topRightRadius="30dp"
+        android:radius="15dp"
         />
-
     <size
-        android:width="500dp"
-        android:height="500dp"
+        android:width="200dp"
+        android:height="200dp"
         />
 
     <solid
-        android:color="#80282A30"
+        android:color="#3C4A61"
         />
 </shape>
