--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
-            android:fontFamily="@font/robotolight"
+            android:fontFamily="@font/meticula"
             android:text="Setting"
             android:textColor="@color/white"
             android:textSize="30dp"
@@ -62,7 +62,7 @@
         android:text="LENAR"
         android:textSize="15dp"
         android:textColor="@color/white"
-        android:fontFamily="@font/robotolight"
+        android:fontFamily="@font/meticula"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/before_btn" />
 
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
-            android:fontFamily="@font/robotolight"
+            android:fontFamily="@font/meticula"
             android:text="broadcast video quality"
             android:textColor="@color/white"
             android:textSize="12dp" />
@@ -115,7 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:fontFamily="@font/robotolight"
+            android:fontFamily="@font/meticula"
             android:text="broadcast audio quality"
             android:textColor="@color/white"
             android:textSize="12dp" />
@@ -138,7 +138,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:fontFamily="@font/robotolight"
+        android:fontFamily="@font/meticula"
         android:text="App"
         android:textColor="@color/white"
         android:layout_marginTop="10dp"
@@ -162,7 +162,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="10dp"
-            android:fontFamily="@font/robotolight"
+            android:fontFamily="@font/meticula"
             android:text="video quality"
             android:textColor="@color/white"
             android:textSize="12dp" />
@@ -195,7 +195,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:fontFamily="@font/robotolight"
+            android:fontFamily="@font/meticula"
             android:text="video bitrate"
             android:textColor="@color/white"
             android:textSize="12dp" />
@@ -228,7 +228,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:fontFamily="@font/robotolight"
+            android:fontFamily="@font/meticula"
             android:text="audio resolution"
             android:textColor="@color/white"
             android:textSize="12dp" />
