--- a/app/src/main/res/layout/fragment_lenar_info.xml
+++ b/app/src/main/res/layout/fragment_lenar_info.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:text="50ms"
             android:textColor="@color/white"
-            android:fontFamily="@font/robotolight"
+            android:fontFamily="@font/meticula"
             android:textSize="12dp"/>
 
         <ImageView
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:text="90%"
             android:textColor="@color/white"
-            android:fontFamily="@font/robotolight"
+            android:fontFamily="@font/meticula"
             android:textSize="12dp"/>
 
     </LinearLayout>
