--- a/app/src/main/res/layout/fragment_mini_setting.xml
+++ b/app/src/main/res/layout/fragment_mini_setting.xml
@@ -37,7 +37,7 @@
                     android:layout_height="0dp"
                     android:layout_gravity="center|top"
                     android:layout_weight="1"
-                    android:fontFamily="@font/robotolight"
+                    android:fontFamily="@font/meticula"
                     android:gravity="center|top"
                     android:text="Sound: ON"
                     android:textColor="@color/white"
@@ -64,7 +64,7 @@
                     android:layout_height="0dp"
                     android:layout_gravity="center|top"
                     android:layout_weight="1"
-                    android:fontFamily="@font/robotolight"
+                    android:fontFamily="@font/meticula"
                     android:gravity="center|top"
                     android:text="Mic: ON"
                     android:textColor="@color/white"
@@ -89,7 +89,7 @@
                     android:layout_height="0dp"
                     android:layout_gravity="center|top"
                     android:layout_weight="1"
-                    android:fontFamily="@font/robotolight"
+                    android:fontFamily="@font/meticula"
                     android:gravity="center|top"
                     android:text="16 : 9"
                     android:textColor="@color/white"
@@ -114,7 +114,7 @@
                     android:layout_height="0dp"
                     android:layout_gravity="center|top"
                     android:layout_weight="1"
-                    android:fontFamily="@font/robotolight"
+                    android:fontFamily="@font/meticula"
                     android:gravity="center|top"
                     android:text="2160P"
                     android:textColor="@color/white"
@@ -138,7 +138,7 @@
                     android:layout_height="0dp"
                     android:layout_gravity="center|top"
                     android:layout_weight="1"
-                    android:fontFamily="@font/robotolight"
+                    android:fontFamily="@font/meticula"
                     android:gravity="center|top"
                     android:text="Bitrate : 16M"
                     android:textColor="@color/white"
