--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -50,7 +50,7 @@
             android:id="@+id/record_time_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/robotolight"
+            android:fontFamily="@font/meticula"
             android:text="00:00:00"
             android:textColor="@color/white"
             android:textSize="13dp"
