--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/imageView5"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background2"
@@ -26,11 +27,13 @@
         app:layout_constraintVertical_bias="0.4" />
 
     <TextView
+        android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
         android:fontFamily="@font/meticula"
-        android:gravity="center"
-        android:text="Lenar is Ready"
+        android:gravity="start|center"
+        android:text="Mode"
         android:textColor="@color/white"
         android:textSize="25dp"
         android:layout_marginBottom="40dp"
@@ -48,7 +51,6 @@
         android:text="Record"
         android:textColor="#3C4A61"
         android:textSize="20dp"
-        android:onClick="video_btn_click"
         app:layout_constraintVertical_bias="0.7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +68,6 @@
         android:text="Live Stream"
         android:textColor="@color/white"
         android:textSize="20dp"
-        android:onClick="live_btn_click"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/video_select_btn" />
@@ -85,5 +86,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
