--- a/app/src/main/res/layout/activity_live_setting.xml
+++ b/app/src/main/res/layout/activity_live_setting.xml
@@ -46,56 +46,65 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/logout_btn"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView14">
-
-            <ImageView
-                android:id="@+id/google_account_image"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:scaleType="centerCrop"
-                android:layout_marginStart="30dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop="15dp">
 
             <TextView
-                android:layout_marginStart="20dp"
-                android:id="@+id/google_account_text"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginStart="30dp"
+                android:layout_weight="1"
                 android:fontFamily="@font/meticula"
-                android:gravity="center"
-                android:text="ID"
+                android:gravity="start"
+                android:text="Account"
                 android:textColor="@color/white"
-                android:textSize="12dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/google_account_image"
-                app:layout_constraintTop_toTopOf="@+id/google_account_image" />
+                android:textSize="12dp" />
 
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="25dp"
-                android:background="@drawable/shape_color_roundsquare4"
-                android:fontFamily="@font/meticula"
-                android:gravity="center"
-                android:text="Log out"
-                android:textColor="@color/white"
-                android:textSize="12dp"
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/logout_btn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="2"
                 android:layout_marginEnd="25dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView14">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:id="@+id/google_account_image"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:scaleType="centerCrop"
+                    android:layout_marginStart="5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:layout_marginStart="20dp"
+                    android:id="@+id/google_account_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/meticula"
+                    android:gravity="center"
+                    android:text="ID"
+                    android:textColor="@color/white"
+                    android:textSize="12dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/google_account_image"
+                    app:layout_constraintTop_toTopOf="@+id/google_account_image" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
