--- a/app/src/main/res/drawable/shape_color_roundsquare5.xml
+++ b/app/src/main/res/drawable/shape_color_roundsquare5.xml
@@ -3,13 +3,12 @@
     <corners
         android:radius="15dp"
         />
-
     <size
-        android:width="150dp"
-        android:height="50dp"
+        android:width="200dp"
+        android:height="200dp"
         />
 
     <solid
-        android:color="#253867"
+        android:color="#333C4A61"
         />
 </shape>
