--- a/app/src/main/res/layout/layout_loading_dialog.xml
+++ b/app/src/main/res/layout/layout_loading_dialog.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/shape_roundsquare"
+    android:background="#66000000"
     android:orientation="vertical"
     android:padding="20dp">
 
@@ -13,15 +15,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="visible" />
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
-        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:fontFamily="@font/meticula"
         android:gravity="center"
-        android:text="Loading..." />
-</LinearLayout>
+        android:text="Creating Live event"
+        android:textColor="@color/white"
+        android:textSize="14dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toEndOf="@+id/loading_signal"
+        app:layout_constraintStart_toStartOf="@+id/loading_signal"
+        app:layout_constraintTop_toBottomOf="@+id/loading_signal" />
+</androidx.constraintlayout.widget.ConstraintLayout>
 
